<resources>
    <!-- String型 文字列:List -->
    <!-- List:飜数 -->
    <string-array name="list1">
        <item>1翻</item>
        <item>2翻</item>
        <item>3翻</item>
        <item>4翻</item>
        <item>5翻</item>
        <item>6翻</item>
        <item>7翻</item>
        <item>8翻</item>
        <item>9翻</item>
        <item>10翻</item>
        <item>11翻</item>
        <item>12翻</item>
        <item>13翻以上</item>
    </string-array>
    <!-- List:符数 -->
    <string-array name="list2">
        <item>平和ツモ</item>
        <item>七対子</item>
        <item>30符</item>
        <item>40符</item>
        <item>50符</item>
        <item>60符</item>
        <item>70符</item>
        <item>80符</item>
        <item>90符</item>
        <item>100符</item>
        <item>110符</item>
    </string-array>
    <!-- List:アガリ方 -->
    <string-array name="list3">
        <item>ロン：鳴×</item>
        <item>ロン：鳴◯</item>
        <item>ツモ：鳴×</item>
        <item>ツモ：鳴◯</item>
        <item>ツモ：嶺上</item>
        <item>平和：ツモ</item>
        <item>平和：ロン</item>
        <item>七対子：ツモ</item>
        <item>七対子：ロン</item>
    </string-array>
    <!-- List:雀頭 -->
    <string-array name="list4">
        <item>数牌</item>
        <item>三元牌</item>
        <item>場風牌</item>
        <item>自風牌</item>
        <item>客風牌</item>
        <item>場風・自風牌</item>
    </string-array>
    <!-- List:待ち -->
    <string-array name="list5">
        <item>単騎待ち（ﾀﾝｷ）</item>
        <item>辺張待ち（ﾍﾟﾝﾁｬﾝ）</item>
        <item>嵌張待ち（ｶﾝﾁｬﾝ）</item>
        <item>両面待ち（ﾘｬﾝﾒﾝ）</item>
        <item>双碰待ち（ｼｬﾝﾎﾟﾝ）</item>
    </string-array>
    <!-- List:待ち -->
    <string-array name="list6">
        <item>0組</item>
        <item>1組</item>
        <item>2組</item>
        <item>3組</item>
        <item>4組</item>
    </string-array>

    <!-- String型 文字列:単体 -->
    <string name="app_name">麻雀★ツール</string>
    <string name="tools">ツール</string>
    <string name="toolsIcon">⚙</string>
    <string name="han">翻数</string>
    <string name="fu">符数</string>
    <string name="oya">親</string>
    <string name="ko">子</string>
    <string name="pointTableP">親：点数表</string>
    <string name="pointTableC">子：点数表</string>
    <string name="fuImage">符計算表</string>
    <string name="function">計算</string>
    <string name="parentPoint">%d：(%dオール)</string>
    <string name="parentPoint2">%d(%d)：(%dオール(%dオール))</string>
    <string name="childPoint">%d：(%d,%d)</string>
    <string name="childPoint2">%d(%d)：(%d(%d),%d(%d))</string>
    <string name="place">%d本場</string>
    <string name="pointAlias">%s\n%d</string>
    <string name="kihon">基本点</string>
    <string name="agari">アガリ方</string>
    <string name="head">アタマ：雀頭</string>
    <string name="machi">待ち</string>
    <string name="mentu">面子</string>
    <string name="syuntu">順子</string>
    <string name="minkoutu">明刻</string>
    <string name="ankoutu">暗刻</string>
    <string name="minkantu">明槓</string>
    <string name="ankantu">暗槓</string>
    <string name="tyutyan">中張牌</string>
    <string name="tanyao">么九牌</string>
    <string name="markResult">結果：〇〇符</string>
    <string name="markResultC">結果：%d符（%d符）</string>
    <string name="markSyoukei">%d符</string>
    <string name="error">エラー\n正しい値を入力してください</string>
    <string name="point">点数</string>
    <string name="pointCheck">点数計算</string>
    <string name="pointTables">点数関連</string>
    <string name="yakuTables">役関連</string>
    <string name="yakuTable">役一覧</string>
    <string name="wordList">単語表</string>
    <string name="theme">テーマ変更</string>

    <!-- 説明 -->
    <string name="description1">同じ種類で数字が３つ連続している組み合わせ</string>
    <string name="description2">「ポン」をして集めた３つの同じ牌の組み合わせ</string>
    <string name="description3">「ポン」をせずに集めた３つの同じ牌の組み合わせ</string>
    <string name="description4">「大明槓」「小明槓」「加槓」を行なった場合</string>
    <string name="description5">「暗槓」を行なった場合</string>
    <string name="description01">数牌の二から八の牌</string>
    <string name="description02">字牌と、数牌のうちの一と九の牌の総称。</string>

    <string name="description1Title">順子（シュンツ）</string>
    <string name="description2Title">明刻（ミンコ）</string>
    <string name="description3Title">暗刻（アンコ）</string>
    <string name="description4Title">明槓（ミンカン）</string>
    <string name="description5Title">暗槓（アンカン）</string>
    <string name="description01Title">中張牌（チュンチャン）,断么牌（タンヤオ）</string>
    <string name="description02Title">么九牌（ヤオチュー）</string>

    <!-- 雀頭説明 -->
    <string name="head1">1~9の数牌</string>
    <string name="head2">[白][発][中]の牌</string>
    <string name="head3">場風が東の時の[東]\n場風が南の時の[南]</string>
    <string name="head4">東家の時の[東]\n南家の時の[南]</string>
    <string name="head5">場風牌、自風牌のどちらでもない風牌</string>
    <string name="head6">場風牌、自風牌のどちらもの風牌</string>
    <string name="head1Title">数牌（シュウ）</string>
    <string name="head2Title">三元牌（サンゲン）</string>
    <string name="head3Title">場風牌（バカゼ）,圏風牌（チャンフォン）</string>
    <string name="head4Title">自風牌（ジカゼ）,門風牌（メンフォン）</string>
    <string name="head5Title">客風牌（コーフォン）,オタ風牌</string>
    <string name="head6Title">場風・自風牌 ,連風牌（リェンフォン）</string>

    <!-- 雀頭説明 -->
    <string name="waitDest1">雀頭が一枚\n→ 雀頭となる１種類の待ち</string>
    <string name="waitDest2">[8,9]の時の[7]や\n[1,2]の時の[3]といった１種類の待ち</string>
    <string name="waitDest3">[2,4]の時の[3]や\n[6,8]の時の[7]といった１種類の待ち</string>
    <string name="waitDest4">[3,4]の時の[2,5]や\n[7,8]の時の[6,9]といった２種類以上の待ち</string>
    <string name="waitDest5">対子が２組\n→ 雀頭,刻子となる待ち</string>
    <string name="waitDest1Title">単騎待ち（タンキ）</string>
    <string name="waitDest2Title">辺張待ち（ペンチャン）</string>
    <string name="waitDest3Title">嵌張待ち（カンチャン）</string>
    <string name="waitDest4Title">両面待ち（リャンメン）</string>
    <string name="waitDest5Title">双碰待ち（シャンポン）</string>

    <!-- オプションメニュー用 -->
    <string name="privacy">プライバシーポリシー</string>
    <string name="privacy_URL">https://www.gensounosakura.work/posts/5390577</string>
    <string name="backString">戻る</string>
    <string name="homeBack">場管理へ戻る</string>
    <string name="fantasyHp">幻想乃桜工房のHP</string>
    <string name="fantasy_url">https://www.gensounosakura.work</string>
    <string name="mentuDescript">単語を長押しで簡易説明</string>
    <string name="logo_image">Logo Image</string>
    <string name="first_dice">2：右</string>
    <string name="dice_result">%d：%s</string>
    <string name="roll">振る</string>
    <string name="dice_title">サイコロ</string>
    <string name="move">移動</string>
    <string name="fu_calculate_title">符計算ツール</string>
    <string name="table_title">表一式</string>
    <string name="blank_table" />
    <string name="windDescription">風表示</string>
    <string name="yaku_table_string">役一覧表</string>
    <string name="reviewString">レビューをする</string>
    <string name="reviewUrl">market://details?id=momonyan.mahjongg_tools</string>
    <string name="otherAppUrl1">market://details?id=momonyan.mahjongrecorder</string>
    <string name="otherAppUrl2">market://details?id=momonyan.mahjongmemo</string>
    <string name="otherAppUrls">https://play.google.com/store/apps/developer?id=%E5%B9%BB%E6%83%B3%E4%B9%83%E6%A1%9C%E5%B7%A5%E6%88%BF</string>
    <string name="reviewMail">gensounosakurakikimimi@gmail.com</string>


    <string name="first_wind">東</string>
    <string name="wind_description">風</string>
    <string name="roll_wind">回す</string>
    <string name="yakuTable_1han">1飜</string>
    <string name="yakuTable_2han">2飜</string>
    <string name="yakuTable_3han">3飜</string>
    <string name="yakuTable_4han">4飜</string>
    <string name="yakuTable_6han">6飜</string>
    <string name="yakuTable_yakuman">役満</string>
    <string name="tumo_20">和了：20符</string>
    <string name="mangan_string">満貫</string>
    <string name="hane_dis">跳満\n6,7翻</string>
    <string name="bai_dis">倍満\n8~10翻</string>
    <string name="sanbai_dis">倍満\n11翻以上</string>
    <string name="yaku_dis">役満\n(13飜以上)</string>

    <string name="fu_string">符</string>
    <string name="tanyao_string">断么牌</string>
    <string name="yaotyu_string">幺九牌</string>


    <string name="tumo">ツモ</string>
    <string name="rinsyan_tumo">嶺上ツモ</string>
    <string name="ron">ロン</string>
    <string name="menzen_ron">門前ロン</string>
    <string name="pinfu">平和</string>
    <string name="ti_toi">七対子</string>
    <string name="ti_toi_kana">チートイツ</string>
    <string name="fu0_string">0符</string>
    <string name="fu2_string">2符</string>
    <string name="fu4_string">4符</string>
    <string name="fu8_string">8符</string>
    <string name="fu16_string">16符</string>
    <string name="fu10_string">10符</string>
    <string name="fu20_string">20符</string>
    <string name="fu30_string">30符</string>
    <string name="fu25_string">25符</string>
    <string name="tanki">単騎</string>
    <string name="ryanmen">両面</string>
    <string name="pentyan">辺張</string>
    <string name="syabo">双碰</string>
    <string name="agarikata">上がり方</string>
    <string name="tuuzyou">通常</string>
    <string name="notyakuhai">役牌以外</string>
    <string name="yakuhai">役牌</string>
    <string name="renpu_">連風牌</string>
    <string name="kantyan">嵌張</string>
    <string name="syun">順子</string>
    <string name="ko_tu_setume">刻子(暗なら2倍)</string>
    <string name="kantu_setume">槓子(暗なら2倍)</string>

    <string name="oya_label">親-点数表</string>
    <string name="ko_label">子-点数表</string>

    <string name="readmeTitle1">1：風ボタン</string>
    <string name="readmeTitle2">2：本場ボタン</string>
    <string name="readmeTitle3">3：起家ボタン</string>
    <string name="readmeTitle4">4：メニューボタン</string>
    <string name="readmeTitle5">フリック機能</string>
    <string name="readme1">ボタンを押すと切り替わります。\n\t連チャンすると本場数が自動でプラスされます。\n\t東のプレイヤーを長押しをすることで本場数をマイナスできます。\n\t本場数が0の時に東のプレイヤーを長押しすることで起家が設定できます。</string>
    <string name="readme2">本場数をプラスします。\n\t長押しでマイナスします。</string>
    <string name="readme3">このボタンを押した後プレイヤーの風ボタンを押すことで起家が設定できます。</string>
    <string name="readme4">様々なツールの画面へ移動します。</string>
    <string name="readme5">フリックすることでテーマを変更できます（全3種類）</string>
    <string name="readMe">このアプリの使い方</string>
    <string name="webPageMove">Webページ系</string>
    <string name="otherAppMove">他アプリ系</string>
    <string name="otherApp1">麻雀結果記録表へ</string>
    <string name="otherApp2">麻雀点数やりとりメモへ</string>
    <string name="otherAppStore">幻想乃桜工房の他アプリ</string>


</resources>
