<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!---->
        <TextView
            android:id="@+id/fuTableTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="上がり方"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_row="0"
            app:layout_rowSpan="2" />

        <TextView
            android:id="@+id/fuTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableSubTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="通常"
            app:layout_column="1"
            app:layout_columnSpan="4"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableSubTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pinfu"
            app:layout_column="5"
            app:layout_columnSpan="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableSubTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti_toi"
            app:layout_column="7"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableAgariTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tumo"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableAgariTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ron"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableAgariTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rinsyan_tumo"
            app:layout_column="3"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableAgariTitle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menzen_ron"
            app:layout_column="4"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableAgariTitle5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tumo"
            app:layout_column="5"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableAgariTitle6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ron"
            app:layout_column="6"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableAgariTitle7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti_toi_kana"
            app:layout_column="7"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableAgariFu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu2_string"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableAgariFu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu0_string"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableAgariFu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu0_string"
            app:layout_column="3"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableAgariFu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu10_string"
            app:layout_column="4"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableAgariFu5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu20_string"
            app:layout_column="5"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableAgariFu6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu30_string"
            app:layout_column="6"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableAgariFu7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu25_string"
            app:layout_column="7"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout1">

        <TextView
            android:id="@+id/fuTableJanTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableJanSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="役牌以外"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableJanSubTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="役牌"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableJanSubTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="連風牌"
            app:layout_column="3"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableJanFuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableJanFu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu0_string"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableJanFu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu2_string"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableJanFu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu4_string"
            app:layout_column="3"
            app:layout_row="1" />

    </android.support.v7.widget.GridLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2">

        <TextView
            android:id="@+id/fuTableMachiTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machi"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMachiSubTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="単騎"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMachiSubTitleText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="両面"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMachiSubTitleText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="辺張"
            app:layout_column="3"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMachiSubTitleText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="双碰"
            app:layout_column="5"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMachiSubTitleText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="嵌張"
            app:layout_column="4"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMachiFuTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMachiFuText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu2_string"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMachiFuText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu0_string"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMachiFuText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu2_string"
            app:layout_column="3"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMachiFuText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu0_string"
            app:layout_column="5"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMachiFuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu2_string"
            app:layout_column="4"
            app:layout_row="1" />
    </android.support.v7.widget.GridLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout3">

        <!---->
        <TextView
            android:id="@+id/fuTableMenthuTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mentu"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_row="0"
            app:layout_rowSpan="2" />

        <TextView
            android:id="@+id/fuTableMenthuFuTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableMenthuSubTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="順子"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMenthuSubTitleText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="刻子(暗なら2倍)"
            app:layout_column="3"
            app:layout_columnSpan="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMenthuSubTitleText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="槓子(暗なら2倍)"
            app:layout_column="5"
            app:layout_columnSpan="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fuTableMenthuSub2TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanyao_string"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMenthuSub2TitleText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yaotyu_string"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMenthuSub2TitleText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanyao_string"
            app:layout_column="3"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMenthuSub2TitleText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yaotyu_string"
            app:layout_column="4"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMenthuSub2TitleText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanyao_string"
            app:layout_column="5"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMenthuSub2TitleText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yaotyu_string"
            app:layout_column="6"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fuTableMenthuFu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu0_string"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableMenthuFu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu0_string"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableMenthuFu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu2_string"
            app:layout_column="3"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableMenthuFu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu4_string"
            app:layout_column="4"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableMenthuFu5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu8_string"
            app:layout_column="5"
            app:layout_row="2" />

        <TextView
            android:id="@+id/fuTableMenthuFu6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu16_string"
            app:layout_column="6"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>